--- a/assets/CSS/Style.css
+++ b/assets/CSS/Style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 
 * {
     margin: 0;
@@ -11,7 +12,15 @@ body {
     background-color: #160430;
 }
 
-.container {
+.main-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container-logo {
     width: 60%;
     height: 100vh;
     background-image: url(../img/Background\ Image.png);
@@ -25,7 +34,6 @@ body {
 header {
     width: 100%;
     height: 100px;
-    border: 1px solid red;
     padding-left: 50px;
     padding-top: 30px;
 }
@@ -35,7 +43,7 @@ header {
     height: 45px;
 }
 
-.container h1 {
+.container-logo h1 {
     font-size: 50px;
     font-weight: bold;
     color: white;
@@ -45,6 +53,119 @@ header {
     line-height: 50px;
 }
 
-.container h1 span {
+.container-logo h1 span {
     color:#501794;
+}
+
+/* segunda parte */
+
+.container-form {
+    width: 40%;
+    height: 100vh;
+    padding: 0px 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container-form h2 {
+    font-size: 70px;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.container-form h4 {
+    margin-top: 16px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+}
+
+.container-form form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
+
+.container-form form input {
+    width: 100%;
+    height: 60px;
+    padding: 0px 10px;
+    border-radius: 10px;
+    color: #A4A4A4;
+    background-color: #261046;
+    outline: none;
+    border: none;
+    margin-top: 16px;
+    font-size: 16px;
+}
+
+.container-form form .sign-in {
+    width: 100%;
+    height: 60px;
+    border: none;
+    outline: none;
+    border-radius: 18px;
+    font-size: 22px;
+    color: white;
+    background: linear-gradient(#501794, #3E70A1);
+    cursor: pointer;
+}
+
+.container-form .linha {
+    width: 100%;
+    border: 1px solid white;
+    margin-top: 40px;
+}
+
+.container-form .Or {
+    margin-top: 40px;
+    font-size: 12px;
+    color: #B6B6B6;
+}
+
+.container-form .buttons {
+    width: 100%;
+    margin-top: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.container-form .buttons button {
+    width: 100%;
+    height: 45px;
+    border-radius: 10px;
+    color: white;
+    background-color: #3B2063;
+    border: none;
+    outline: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    font-weight: 300;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.container-form .buttons button img {
+    width: 18px;
+    height: 18px;
+}
+
+.container-form .by {
+    width: 100%;
+    left: 0;
+    font-size: 12px;
+    color: #B6B6B6;
+    margin-top: 20px;
+    font-weight: 500;
+}
+
+.container-form .by .colorido {
+    color: #9D5CE9;
 }
